--- a/Index.html
+++ b/Index.html
@@ -13,16 +13,15 @@
 <body>
 
     <div class="badge-title">
-        <h1>Hul's-Meteo</h1>
-        <h3>La meilleur application de méteo en temps réel</h3>
        
-
         <form>
+            <h1>Hully's-Meteo</h1>
+            <h3>La meilleur application de méteo en temps réel</h3>
             <div class="saisi">
               <label for="city" class="form-label">veuillez rentrer le nom de votre ville ci-dessous</label>
               <input type="cp" class="form-control" id="inputVille"> <br>
             </div>
-            <button type="submit" class="btn btn-primary">Trouver</button>
+            <button type="submit" class="btn btn-primary">Recherche</button>
         </form> <br> <br>
 
 
@@ -30,13 +29,12 @@
             <div class="element-temps1">
                 <div id="ville" class="box-element"></div>
                 <div id="humidite" class="box-element"></div>
-            </div> <br>
-          
+            </div>          
 
             <div class="element-temps2">
               <div id="vent" class="box-element"></div>
               <div id="temp" class="box-element"></div>
-            </div> <br>
+            </div>
          </div>
 
 
